fix: editorActions gap between buttons

--- a/src/features/editor/Editor.module.css
+++ b/src/features/editor/Editor.module.css
@@ -13,14 +13,14 @@
   padding: 0 20px;
   min-width: 410px;
   text-align: center;
-
   background-color: var(--primary);
   border-radius: 10px;
+  gap: 4px;
 }
 
 .actionGroup {
   display: flex;
-  gap: 8px;
+  gap: 4px;
   align-items: center;
 }
 
